Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77399

The "Apply" button for Qt Assistant main settings window doesn't works

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13.2, 5.14.0 Alpha
    • 5.13.0
    • Tools: Assistant
    • None
    • Win 10, Qt for MSVC 2017 64
    • Windows
    • 771fdc5b13f1b13c82eeaf513696b2e564326b80 (qt/qttools/5.13)

      Only the "Ok" button applies font changes (maybe other settings too).
      The "Apply" button, seems, doesn't work at all. Also if you change the font, hit "Apply" and then hit "Cancel", no changes apply.

      Probably other platforms, compilers too.

        1. a4.gif
          285 kB
          Oleg Ratsa
        For Gerrit Dashboard: QTBUG-77399
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            pie_jesu Oleg Ratsa
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes