Fix applying font and option settings

Move the code which applies changes to applyChanges() method.

Fixes: QTBUG-77399
Change-Id: Ic4436ce65e246c518a6fcdfe119df772a0585468
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>