src/assistant/assistant/mainwindow.cpp
@@ -842,7 +842,7 @@ void MainWindow::showPreferences()
             m_centralWidget, &CentralWidget::updateBrowserFont);
     connect(&dia, &PreferencesDialog::updateUserInterface,
             m_centralWidget, &CentralWidget::updateUserInterface);
-    dia.showDialog();
+    dia.exec();
 }
 
 void MainWindow::syncContents()
